# BioReads

./: LICENSE  README.md  pyproject.toml
src/bioreads/: __init__.py  cli.py
src/bioreads.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bioreads/core/: aligner.py  detector.py  qc.py
src/bioreads/gui/: app.py
